<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_03"
              tools:context="com.example.donmykl.myleancloudapp.RegisterActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <!-- register progress -->
     <ProgressBar
        android:id="@+id/register_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>


     <LinearLayout
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:orientation="vertical"
             android:layout_marginTop="30dp"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="30dp"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
             android:id="@+id/email_register_form">

             <ImageView
                 android:layout_width="140dp"
                 android:layout_height="140dp"
                 android:layout_gravity="center_horizontal"
                 android:src="@drawable/ecommerce_05" />





            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/username"
                    android:background="@color/colorPrimaryDark"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">

             <AutoCompleteTextView
                 android:id="@+id/phone"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:hint="@string/phone"
                 android:ems="10"
                 android:inputType="phone"
                 android:background="@color/colorPrimaryDark"
                 android:maxLines="1"
                 android:singleLine="true"/>
             </android.support.design.widget.TextInputLayout>

             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">

             <AutoCompleteTextView
                 android:id="@+id/email"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:hint="@string/email"
                 android:ems="10"
                 android:inputType="textEmailAddress"
                 android:imeActionId="@+id/register"
                 android:imeOptions="actionUnspecified"
                 android:background="@color/colorPrimaryDark"
                 android:maxLines="1"
                 android:singleLine="true"/>

             </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/register"
                    android:imeOptions="actionUnspecified"
                    android:background="@color/colorPrimaryDark"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/username_register_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:background="@drawable/button_rectangle_pink"
                android:textStyle="bold"/>

        </LinearLayout>
     </LinearLayout>
    </RelativeLayout>
</LinearLayout>
